book page now have great design
